[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dollar_data"
version = "0.0.1"
authors = [{name="Carlos Mendez", email="carlosmendez170210@gmail.com"}]
description = "Module that allows different operations with BCV's statistics"
license = { text = "BSD" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "asttokens==3.0.0",
    "black==25.1.0",
    "click==8.1.8",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "debugpy==1.8.12",
    "decorator==5.1.1",
    "et_xmlfile==2.0.0",
    "executing==2.2.0",
    "fonttools==4.55.8",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "jedi==0.19.2",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mypy-extensions==1.0.0",
    "nest-asyncio==1.6.0",
    "numpy==2.2.2",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "prompt_toolkit==3.0.50",
    "psutil==6.1.1",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "Pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pyzmq==26.2.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "wcwidth==0.2.13",
    "xlrd==2.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dollar_data", "tests"]