[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dollar_data"
version = "0.0.1"
authors = [{name="Carlos Mendez", email="carlosmendez170210@gmail.com"}]
description = "Module that allows different operations with BCV's statistics"
license = { text = "BSD" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "flask-apscheduler (>=1.13.1,<2.0.0)",
    "sphinx (>=8.1.3,<9.0.0)",
    "sphinx-autobuild (>=2024.10.3,<2025.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "pylint (>=3.3.4,<4.0.0)",

]
[tool.poetry.dependencies]
python = ">=3.11.11"
[tool.setuptools.packages.find]
where = ["."]
include = ["dollar_data", "tests"]